[package]
name = "kvcounter"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "kvcounter"

[dependencies]
futures = "0.3"
form_urlencoded = "1.0"
serde_json = "1.0"
wasmbus-rpc = "0.10"
wasmcloud-interface-httpserver = "0.7"
wasmcloud-interface-keyvalue = "0.8"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
